platform/gitops/components/platform/keycloak/base/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: identity
  annotations:
    networking.istio.io/exportTo: "*"
spec:
  selector:
    app.kubernetes.io/name: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: tls
      port: 8443
      targetPort: 8443
